--- a/APS360_ref.bib
+++ b/APS360_ref.bib
@@ -1,24 +1,197 @@
-@incollection{Bengio+chapter2007,
-author = {Bengio, Yoshua and LeCun, Yann},
-booktitle = {Large Scale Kernel Machines},
-publisher = {MIT Press},
-title = {Scaling Learning Algorithms Towards {AI}},
-year = {2007}
+ @inproceedings{agrawal2024image,
+  author    = {Agrawal, Poorva and Mahajan, Shriniwas and Kadu, Varun and Rakesh, Nitin and Parvathi, R. and Kaur, Gagandeep},
+  title     = {Image Colorization: Comprehensive Review},
+  booktitle = {2024 First International Conference on Technological Innovations and Advance Computing (TIACOMP)},
+  year      = {2024},
+  pages     = {529--535},
+  doi       = {10.1109/TIACOMP64125.2024.00093},
+  keywords  = {Deep learning; Representation learning; Visualization; Technological innovation; Reviews; Superresolution; Real-time systems; Spatial resolution; Spectral analysis; Residual neural networks; Image colorization; GAN; ANN}
 }
 
-@article{Hinton06,
-author = {Hinton, Geoffrey E. and Osindero, Simon and Teh, Yee Whye},
-journal = {Neural Computation},
-pages = {1527--1554},
-title = {A Fast Learning Algorithm for Deep Belief Nets},
-volume = {18},
-year = {2006}
+@misc{cheng2016deepcolorization,
+  title         = {Deep Colorization},
+  author        = {Zezhou Cheng and Qingxiong Yang and Bin Sheng},
+  year          = {2016},
+  eprint        = {1605.00075},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CV},
+  url           = {https://arxiv.org/abs/1605.00075}
 }
 
-@book{goodfellow2016deep,
-title={Deep learning},
-author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron and Bengio, Yoshua},
-volume={1},
-year={2016},
-publisher={MIT Press}
+
+@incollection{hertzmann2023image,
+  author    = {Hertzmann, Aaron and Jacobs, Charles E. and Oliver, Nuria and Curless, Brian and Salesin, David H.},
+  title     = {Image Analogies},
+  booktitle = {Seminal Graphics Papers: Pushing the Boundaries, Volume 2},
+  year      = {2023},
+  publisher = {Association for Computing Machinery},
+  pages     = {58:1--58:14},
+  doi       = {10.1145/3596711.3596770},
+  url       = {https://doi.org/10.1145/3596711.3596770}
+}
+
+@article{Iizuka2016Colourization,
+  author    = {Satoshi Iizuka and Edgar Simo-Serra and Hiroshi Ishikawa},
+  title     = {Let There Be Color! Joint End-to-End Learning of Global and Local Image Priors for Automatic Image Colorization with Simultaneous Classification},
+  journal   = {ACM Transactions on Graphics (TOG)},
+  volume    = {35},
+  number    = {4},
+  articleno = {110},
+  pages     = {110:1--110:11},
+  year      = {2016},
+  month     = jul,
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  doi       = {10.1145/2897824.2925974},
+  url       = {https://doi.org/10.1145/2897824.2925974},
+  issn      = {0730-0301},
+  abstract  = {We present a novel technique to automatically colorize grayscale images that combines both global priors and local image features. Based on Convolutional Neural Networks, our deep network features a fusion layer that allows us to elegantly merge local information dependent on small image patches with global priors computed using the entire image. The entire framework, including the global and local priors as well as the colorization model, is trained in an end-to-end fashion. Furthermore, our architecture can process images of any resolution, unlike most existing approaches based on CNN. We leverage an existing large-scale scene classification database to train our model, exploiting the class labels of the dataset to more efficiently and discriminatively learn the global priors. We validate our approach with a user study and compare against the state of the art, where we show significant improvements. Furthermore, we demonstrate our method extensively on many different types of images, including black-and-white photography from over a hundred years ago, and show realistic colorizations.},
+  keywords  = {colorization, convolutional neural network}
+}
+
+@misc{kaggle,
+  author  = {Kaggle, Inc.},
+  title   = {Level up with the largest AI and ML community},
+  url     = {https://www.kaggle.com/},
+  urldate = {2025-06-09}
+}
+
+@misc{kaggle_animal,
+  author  = {Sourav Banerjee},
+  title   = {Animal Image Dataset (90 Different Animals)},
+  year    = {2022},
+  url     = {https://www.kaggle.com/datasets/iamsouravbanerjee/animal-image-dataset-90-different-animals},
+  urldate = {2025-06-09}
+}
+
+@misc{kaggle_human,
+  author  = {Fares Elmenshawii},
+  title   = {Human Dataset},
+  year    = {2023},
+  url     = {https://www.kaggle.com/datasets/fareselmenshawii/human-dataset/data},
+  urldate = {2025-06-09}
+}
+
+@misc{kaggle_scene,
+  author  = {Arnaud Rougetet},
+  title   = {Landscape Pictures},
+  year    = {2020},
+  url     = {https://www.kaggle.com/datasets/arnaud58/landscape-pictures},
+  urldate = {2025-06-09}
+}
+
+@misc{leatvanich2025image,
+  author  = {Leatvanich, Crystal},
+  title   = {Image Colorization Using Neural Networks},
+  year    = {2025},
+  month   = {May},
+  url     = {https://medium.com/@crystal.leatvanich/image-colorization-using-neural-networks-aeafd10e6ef5},
+  urldate = {2025-06-09}
+}
+
+@incollection{noaman2022image,
+  author    = {Noaman, M.H. and Khaled, H. and Faheem, H.M.},
+  title     = {Image Colorization: A Survey of Methodologies and Techniques},
+  booktitle = {Proceedings of the International Conference on Advanced Intelligent Systems and Informatics 2021 (AISI 2021)},
+  editor    = {Hassanien, A.E. and Snášel, V. and Chang, K.C. and Darwish, A. and Gaber, T.},
+  year      = {2022},
+  publisher = {Springer, Cham},
+  series    = {Lecture Notes on Data Engineering and Communications Technologies},
+  volume    = {100},
+  pages     = {123--133},
+  doi       = {10.1007/978-3-030-89701-7_11},
+  url       = {https://doi.org/10.1007/978-3-030-89701-7_11}
+}
+
+@misc{olah2022lettherebecolor,
+  author      = {Olah, Justin and Yang, Jenny},
+  title       = {Let There Be Color: Deep Learning Image Colorization},
+  year        = {2022},
+  institution = {Stanford University},
+  note        = {CS231n Course Project Report},
+  url         = {https://cs231n.stanford.edu/reports/2022/pdfs/109.pdf},
+  urldate     = {2025-06-09}
+}
+
+@misc{rosebrock2019bwcolorization,
+  author  = {Rosebrock, Adrian},
+  title   = {Black and white image colorization with OpenCV and Deep Learning},
+  year    = {2019},
+  month   = {Feb},
+  url     = {https://pyimagesearch.com/2019/02/25/black-and-white-image-colorization-with-opencv-and-deep-learning/},
+  urldate = {2025-06-09}
+}
+
+@misc{scienceandmediamuseum2020,
+  title  = {A short history of colour photography},
+  url    = {https://www.scienceandmediamuseum.org.uk/objects-and-stories/history-colour-photography},
+  author = {National Science and Media Museum},
+  year   = {2020},
+  month  = {Jul}
+}
+
+@misc{su2020instanceawareimagecolorization,
+  title         = {Instance-aware Image Colorization},
+  author        = {Jheng-Wei Su and Hung-Kuo Chu and Jia-Bin Huang},
+  year          = {2020},
+  eprint        = {2005.10825},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CV},
+  url           = {https://arxiv.org/abs/2005.10825}
+}
+
+@inproceedings{Vitoria2020ChromaGAN,
+  author    = {Patricia Vitoria and Lara Raad and Coloma Ballester},
+  title     = {{ChromaGAN: Adversarial Picture Colorization with Semantic Class Distribution}},
+  booktitle = {Proceedings of the 2020 IEEE Winter Conference on Applications of Computer Vision (WACV)},
+  year      = {2020},
+  pages     = {2434--2443},
+  publisher = {IEEE Computer Society},
+  address   = {Los Alamitos, CA, USA},
+  month     = mar,
+  doi       = {10.1109/WACV45572.2020.9093389},
+  url       = {https://doi.ieeecomputersociety.org/10.1109/WACV45572.2020.9093389},
+  abstract  = {The colorization of grayscale images is an ill-posed problem, with multiple correct solutions. In this paper, we propose an adversarial learning colorization approach coupled with semantic information. A generative network is used to infer the chromaticity of a given grayscale image conditioned to semantic clues. This network is framed in an adversarial model that learns to colorize by incorporating perceptual and semantic understanding of color and class distributions. The model is trained via a fully self-supervised strategy. Qualitative and quantitative results show the capacity of the proposed method to colorize images in a realistic way achieving state-of-the-art results.},
+  keywords  = {Image color analysis; Semantics; Gray-scale; Gallium nitride; Color; Generators; Task analysis}
+}
+
+@article{vogelsang2024impact,
+  author  = {Marin Vogelsang  and Lukas Vogelsang  and Priti Gupta  and Tapan K. Gandhi  and Pragya Shah  and Piyush Swami  and Sharon Gilad-Gutnick  and Shlomit Ben-Ami  and Sidney Diamond  and Suma Ganesh  and Pawan Sinha },
+  title   = {Impact of early visual experience on later usage of color cues},
+  journal = {Science},
+  volume  = {384},
+  number  = {6698},
+  pages   = {907-912},
+  year    = {2024},
+  doi     = {10.1126/science.adk9587},
+  url     = {https://www.science.org/doi/abs/10.1126/science.adk9587}
+}
+
+@article{zeger2021grayscale,
+  author   = {Z{\v{e}}ger, Ivana and Grgic, Sonja and Vukovi{\'c}, Josip and {\v{S}}i{\v{s}}ul, Gordan},
+  title    = {Grayscale Image Colorization Methods: Overview and Evaluation},
+  journal  = {IEEE Access},
+  year     = {2021},
+  volume   = {9},
+  pages    = {113326--113346},
+  doi      = {10.1109/ACCESS.2021.3104515},
+  keywords = {Image color analysis; Deep learning; Gray-scale; Image quality; Indexes; Image segmentation; Automatic methods; black-and-white image; colorfulness; colorization; deep learning methods; example-based methods; grayscale image; image quality assessment; scribble-based methods; user-guided methods}
+}
+
+@article{zhang2016colorful,
+  title     = {Colorful image colorization},
+  author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
+  journal   = {European conference on computer vision},
+  year      = {2016},
+  publisher = {Springer}
+}
+
+@misc{zhang2017real,
+  title         = {Real-Time User-Guided Image Colorization with Learned Deep Priors},
+  author        = {Zhang, Richard and Zhu, Jun-Yan and Isola, Phillip and Geng, Xinyang and Lin, Angela S. and Yu, Tianhe and Efros, Alexei A.},
+  year          = {2017},
+  eprint        = {1705.02999},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CV},
+  url           = {https://arxiv.org/abs/1705.02999}
 }
