complete contributions section

--- a/__latexindent_temp_APS360_Individual_Report.tex
+++ b/__latexindent_temp_APS360_Individual_Report.tex
@@ -22,7 +22,7 @@ Neural Networks and Deep Learning}
 %######## APS360: Put your names, student IDs and Emails here
 \author{Harkirpa Kaur  \\
 Student\# 1011242479 \\
-\texttt{harkirpa.kaur@mail.utoronto.ca}}
+\texttt{harkirpa.kaur@mail.utoronto.ca}} \\
 
 
 % The \author macro works with any number of authors. There are two commands
@@ -43,7 +43,7 @@ Student\# 1011242479 \\
 
 \maketitle
 %######## APS360: Do not change the next line. This shows your Main body page count.
-Total Pages: \pageref{last_page}
+----Total Pages: \pageref{last_page}
 
 \section{Contributions}
 
@@ -63,8 +63,7 @@ I was responsible for several tasks as the team worked through the image coloriz
 the history of colourized photography. I researched and compiled possible ethical considerations related to image colorization. For the progress report, I wrote the individual contributions section
 and updated the Gantt chart. I also researched and implemented techniques to decrease run time for our primary model. Our model was also facing an issue with avoiding vibrant colours and resorting
 to brown hues. To combat this, I researched and implemented a quantized bin classification method in our existing model. However, this method was not implemented in the final model. For the final
-report, I wrote the quantitative results and project difficulty sections and updated the slideshow accordingly. 
-
+report, I wrote the quantitative results section and updated the slideshow accordingly. I also wrote code to run our primary model on the test dataset and show sample outputs.
 Throughout the project, the team held weekly meetings to discuss progress and next steps for the project. The meetings were led on a rotating basis such that each team member prepared the meeting
 agenda for and led 25\% of all meetings.
 
